[package]
name = "recurse-ring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5"
rocket_oauth2 = "0.5"
octocrab = "0.32"
serde = "1"
serde_json = "1"
figment = { version = "0.10", features = ["toml", "env"] }
tokio = "1"

[dependencies.rocket_dyn_templates]
version = "0.1"
features = ["handlebars"]