[package]
name = "recurse-ring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5"
rocket_oauth2 = "0.5"
rocket_dyn_templates = { version = "0.1", features = ["tera"] }
figment = { version = "0.10", features = ["toml", "env"] }
serde = "1"
serde_json = "1"
tokio = "1.34"
reqwest = "0.11"
octocrab = "0.32"
addr = "0.15"